<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipeshare"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/condividi_le_tue_ricette"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/inserisci_le_tue_credenziali"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="#7A8089"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:hint="@string/username"
                    android:textColorHint="#7A8089"
                    />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:hint="Password"
                    android:textColorHint="#7A8089"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/design_default_color_primary"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/sign_in"
                    />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_margin="10dp"
                    android:background="@color/design_default_color_primary"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/login"
                    />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>